# computer-graphics

courseWork/: 7383_VlasovRoman_cw.docx  courseWork.pro  first.frag  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vert2.vert
lr1-2/: MainWindow.py  OpenGLView.py  lr1.doc  lr2.doc
lr3/: MainWindow.py  OpenGLView.py  lr3.doc
lr4/: BesierCurve.py  MainWindow.py  OpenGLView.py  SplineInterpolate.py  lr4.doc
lr5/: CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  MainWindow.py  Makefile  OpenGLView.py  Shader.cpp  Shader.h  Shader.py  cmake_install.cmake  fragment.glsl  lab5  lab5.doc  main.cpp  planevertex.glsl  shader.frag  shader.vert  vertex.glsl
lr6/: CMakeLists.txt  Camera.cpp  Camera.h  Makefile  Shader.h  axes.cpp  fragment.glsl  imgui.ini  lab6  lr6.doc  main.cpp  toaster.cpp  toaster.h  vertex.glsl
lr7/: CMakeCache.txt  CMakeLists.txt  Cube.h  Makefile  Shader.cpp  axes.h  cmake_install.cmake  fragment.glsl  imgui.ini  lab7  lightingfragment.glsl  lr7.doc  main.cpp  planefragment.glsl
